[tool.poetry]
name = "threesixty"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.9.4"
dj-database-url = "*"
django = "*"
psycopg2-binary = "*"
waitress = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]
isort = "*"
pytest = "*"
pytest-django = "*"
pycodestyle = "*"
coverage = "*"
codecov = "*"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
black = "^21.12b0"
mypy = "^0.930"
django-stubs = "^1.9.0"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
