[tool.poetry]
name = "threesixty"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.10.4"
dj-database-url = "*"
django = "*"
psycopg2-binary = "*"
waitress = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]
isort = "*"
pytest = "*"
pytest-django = "*"
pycodestyle = "*"
coverage = "*"
codecov = "*"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
black = "^22.8"
mypy = "^0.971"
django-stubs = "^1.12.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
