[tool.poetry]
name = "threesixty"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
dj-database-url = "*"
django = "*"
psycopg2-binary = "*"
waitress = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]
isort = "*"
pytest = "*"
pytest-django = "*"
pycodestyle = "*"
coverage = "*"
codecov = "*"
pydocstyle = "*"
flake8 = "*"
black = "*"
mypy = "*"
django-stubs = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
